# awsglue-dask-demo

./: Dockerfile  README.md  main.py  requirements-dev.txt  requirements.txt  tox.ini
demo-models/: pyproject.toml
demo-models/demo_models/: __init__.py  contact.py  content.py  data.py  generation.py
iasc/: Pulumi.demo.yaml  Pulumi.yaml  __main__.py  requirements.txt
presentation/: iasc.tex  models.tex  workflow.tex
workflow/: main.py  requirements.txt
